--- a/src/styles/_trailer.scss
+++ b/src/styles/_trailer.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .trailer {
     background-image: url(../images/fundo_section__trailer.webp);
     background-repeat: no-repeat;
@@ -12,6 +14,14 @@
     }
 
     &__video {
-        max-width: 100%;
+        width: 100%;
     }
+
+    @media (max-width: 767px) {
+        .trailer__video iframe {
+            width: 100%;
+            height: auto;
+        }
+    
+}
 }
